fix text alignment carousel

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -54,6 +54,7 @@
       display: flex;
       margin: 0 auto;
       // transform: translate(0, -100%);
+      text-align: center;
       height: 150px;
       width: 200px;
       z-index: 20;
