--- a/src/components/Mission/Mission.scss
+++ b/src/components/Mission/Mission.scss
@@ -26,6 +26,7 @@
     color: #fff;
     font-size: 3rem;
     font-family: "Marcellus", serif;
+    text-align: center;
 
     // &-italic {
     //   font-style: italic;
